Create the database if it's not there yet when using an external MySQL server.

BUG: 193644

svn path=/trunk/kdesupport/akonadi/; revision=1044718