server/src/akonadi.cpp
@@ -63,7 +63,10 @@ AkonadiServer::AkonadiServer( QObject* parent )
     , mAlreadyShutdown( false )
 {
     DbConfig::init();
-    startDatabaseProcess();
+    if ( DbConfig::useInternalServer() )
+      startDatabaseProcess();
+    else
+      createDatabase();
 
     s_instance = this;
 
@@ -377,6 +380,35 @@ void AkonadiServer::startDatabaseProcess()
     }
   }
 
+  QSqlDatabase::removeDatabase( initCon );
+}
+
+void AkonadiServer::createDatabase()
+{
+  const QLatin1String initCon( "initConnection" );
+  QSqlDatabase db = QSqlDatabase::addDatabase( DbConfig::driverName(), initCon );
+  DbConfig::configure( db );
+  db.setDatabaseName( QString() ); // might not exist yet, then connecting to the actual db will fail
+  if ( !db.isValid() )
+    akFatal() << "Invalid database object during initial database connection";
+
+  if ( db.open() ) {
+    {
+      QSqlQuery query( db );
+      if ( !query.exec( QString::fromLatin1( "USE %1" ).arg( DbConfig::databaseName() ) ) ) {
+        akDebug() << "Failed to use database" << DbConfig::databaseName();
+        akDebug() << "Query error:" << query.lastError().text();
+        akDebug() << "Database error:" << db.lastError().text();
+        akDebug() << "Trying to create database now...";
+        if ( !query.exec( QLatin1String( "CREATE DATABASE akonadi" ) ) ) {
+          akError() << "Failed to create database";
+          akError() << "Query error:" << query.lastError().text();
+          akFatal() << "Database error:" << db.lastError().text();
+        }
+      }
+    } // make sure query is destroyed before we close the db
+    db.close();
+  }
   QSqlDatabase::removeDatabase( initCon );
 }
 
